package andrei.usersservice.model;


public enum UserRole {
    NOT_LOGGED_IN,
    USER,
    ADMIN,
    STORE_MANAGER
}
